force-app/main/default/objects/Ticket__c/fields/Education_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Education_Job_Function__c</fullName>
    <label>Education Job Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10.1 - Edu - President</fullName>
            </value>
            <value>
                <fullName>10.2 - Edu - Vice President</fullName>
            </value>
            <value>
                <fullName>10.3 - Edu - Chancellor</fullName>
            </value>
            <value>
                <fullName>10.4 - Edu - Vice Chancellor</fullName>
            </value>
            <value>
                <fullName>10.4 - Edu - Superintendent of Schools</fullName>
            </value>
            <value>
                <fullName
        >10.6 - Edu - Deputy/Assistant Superintendent of Schools</fullName>
                <label
        >10.6 - Edu - Deputy/Assistant Superintendent of Schools</label>
            </value>
            <value>
                <fullName>10.7 - Edu - Provost</fullName>
            </value>
            <value>
                <fullName>10.8 - Edu - Vice Provost</fullName>
            </value>
            <value>
                <fullName>10.9 - Edu - Chief Academic Officer</fullName>
            </value>
            <value>
                <fullName>10.10 - Edu - Dean</fullName>
            </value>
            <value>
                <fullName>10.11 - Edu - School Principal</fullName>
            </value>
            <value>
                <fullName>10.12 - Edu - Curriculum</fullName>
            </value>
            <value>
                <fullName>10.13 - Edu - Department Chair</fullName>
            </value>
            <value>
                <fullName>10.14 - Edu - Education</fullName>
            </value>
            <value>
                <fullName>10.15 - Edu - E-Rate</fullName>
            </value>
            <value>
                <fullName>10.16 - Edu - Faculty Senate</fullName>
            </value>
            <value>
                <fullName>10.17 - Edu - Instructional Technology</fullName>
            </value>
            <value>
                <fullName>10.18 - Edu - Library/Media Services</fullName>
            </value>
            <value>
                <fullName>10.19 - Edu - Online/Distance Learning</fullName>
            </value>
            <value>
                <fullName>10.20 - Edu - Research</fullName>
            </value>
            <value>
                <fullName>10.21 - Edu - Special Education</fullName>
            </value>
            <value>
                <fullName>10.22 - Edu - Student</fullName>
            </value>
            <value>
                <fullName>10.23 - Edu - Teacher/Professor</fullName>
            </value>
            <value>
                <fullName>99.1 - Other - Unkown</fullName>
            </value>
            <value>
                <fullName
        >01 - Superintendent/Assistant Superintendent</fullName>
                <isActive>false</isActive>
                <label>01 - Superintendent/Assistant Superintendent</label>
            </value>
            <value>
                <fullName>02 - President/Vice President/Chancellor</fullName>
                <isActive>false</isActive>
                <label>02 - President/Vice President/Chancellor</label>
            </value>
            <value>
                <fullName>03 - Director/Provost/Dean</fullName>
                <isActive>false</isActive>
                <label>03 - Director/Provost/Dean</label>
            </value>
            <value>
                <fullName>04 - Principal/Assistant Principal</fullName>
                <isActive>false</isActive>
                <label>04 - Principal/Assistant Principal</label>
            </value>
            <value>
                <fullName>05 - School Board President/Member</fullName>
                <isActive>false</isActive>
                <label>05 - School Board President/Member</label>
            </value>
            <value>
                <fullName>06 - CIO/CTO/IT Director/IT Mgr</fullName>
                <isActive>false</isActive>
                <label>06 - CIO/CTO/IT Director/IT Mgr</label>
            </value>
            <value>
                <fullName
        >07 - Technology Coordinator/Specialist/Administrator</fullName>
                <isActive>false</isActive>
                <label
        >07 - Technology Coordinator/Specialist/Administrator</label>
            </value>
            <value>
                <fullName>08 - Instructional Technology</fullName>
                <isActive>false</isActive>
                <label>08 - Instructional Technology</label>
            </value>
            <value>
                <fullName>09 - CAO/Curriculum Director/Instructional</fullName>
                <isActive>false</isActive>
                <label>09 - CAO/Curriculum Director/Instructional</label>
            </value>
            <value>
                <fullName>10 - Budget/Purchasing/Finance</fullName>
                <isActive>false</isActive>
                <label>10 - Budget/Purchasing/Finance</label>
            </value>
            <value>
                <fullName>11 - Professor/Teacher</fullName>
                <isActive>false</isActive>
                <label>11 - Professor/Teacher</label>
            </value>
            <value>
                <fullName
        >12 - Chief Innovation Officer/Chief Performance Officer</fullName>
                <isActive>false</isActive>
                <label
        >12 - Chief Innovation Officer/Chief Performance Officer</label>
            </value>
            <value>
                <fullName>13 - Public Safety/Emergency Management</fullName>
                <isActive>false</isActive>
                <label>13 - Public Safety/Emergency Management</label>
            </value>
            <value>
                <fullName>14 - Title 1</fullName>
                <isActive>false</isActive>
                <label>14 - Title 1</label>
            </value>
            <value>
                <fullName>15 - Human Resources</fullName>
                <isActive>false</isActive>
                <label>15 - Human Resources</label>
            </value>
            <value>
                <fullName>16 - Librarian</fullName>
                <isActive>false</isActive>
                <label>16 - Librarian</label>
            </value>
            <value>
                <fullName>17 - Student</fullName>
                <isActive>false</isActive>
                <label>17 - Student</label>
            </value>
            <value>
                <fullName>18 - Operations/Admin/Other</fullName>
                <isActive>false</isActive>
                <label>18 - Operations/Admin/Other</label>
            </value>
            <value>
                <fullName>19 - Facilities/Grounds</fullName>
                <isActive>false</isActive>
                <label>19 - Facilities/Grounds</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>