force-app/main/default/objects/Ticket__c/fields/EM_Quadrant__c.field-meta.xml
<CustomField>
    <fullName>EM_Quadrant__c</fullName>
    <description
  >Eisenhower Matrix quadrant values. Used for prioritizing tickets based on this method.</description>
    <inlineHelpText
  >Eisenhower Matrix quadrant values. Used for prioritizing tickets based on this method.</inlineHelpText>
    <label>EM Quadrant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Important / Urgent (Do)</fullName>
            </value>
            <value>
                <fullName>2. Important / Not-Urgent (Schedule)</fullName>
            </value>
            <value>
                <fullName>3. Not Important / Urgent (Delegate)</fullName>
            </value>
            <value>
                <fullName>4. Not Important / Not-Urgent (Delete)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>