force-app/main/default/objects/Ticket__c/fields/Email_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Deployment_Type__c</fullName>
    <label>Email Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Pull_Contact_Count__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awards Call for Entry</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Member Services</fullName>
            </value>
            <value>
                <fullName>Navigator Bid Emails</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Publisher Email</fullName>
            </value>
            <value>
                <fullName>Sales (ELMO)</fullName>
            </value>
            <value>
                <fullName>Survey_Client</fullName>
                <label>Survey (Client)</label>
            </value>
            <value>
                <fullName>Survey (Internal)</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>