force-app/main/default/objects/Ticket__c/fields/Estimated_Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_to_Complete__c</fullName>
    <description>Estimated number of hours to complete the ticket.</description>
    <inlineHelpText
  >Estimated number of hours to complete the ticket.</inlineHelpText>
    <label>Estimated Hours to Complete</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>