force-app/main/default/objects/Ticket__c/fields/Estimated_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Timeline__c</fullName>
    <description
  >The estimated timeline for solution implementation on web tickets, provided during Status Update. Ticket #79824</description>
    <label>Estimated Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>