force-app/main/default/objects/Ticket__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description
  >For large requests, developers should use the ETA to give an indication of when you think a release can be made.</description>
    <inlineHelpText>Estimated Time of implementation</inlineHelpText>
    <label>ETA</label>
    <type>Date</type>
</CustomField>