force-app/main/default/objects/Ticket__c/fields/ETA_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>ETA_Closed_Date__c</fullName>
    <description
  >Shows the date closed if there is one, or the ETA if there is not.</description>
    <formula>IF(NOT(ISBLANK(Date_Closed__c)), Date_Closed__c, ETA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Closed or ETA</label>
    <type>Date</type>
</CustomField>