force-app/main/default/objects/Ticket__c/fields/Event_Brand__c.field-meta.xml
<CustomField>
    <fullName>Event_Brand__c</fullName>
    <formula>TEXT(Event__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Brand</label>
    <type>Text</type>
</CustomField>