force-app/main/default/objects/Ticket__c/fields/Event_Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Display_Title__c</fullName>
    <formula>Event__r.Display_Title__c</formula>
    <label>Event Display Title</label>
    <type>Text</type>
</CustomField>