force-app/main/default/objects/Ticket__c/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <formula>TEXT( Event__r.Duration_minutes__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Duration (minutes)</label>
    <type>Text</type>
</CustomField>