force-app/main/default/objects/Ticket__c/fields/Event_Filters__c.field-meta.xml
<CustomField>
    <fullName>Event_Filters__c</fullName>
    <description
  >Created for Ticket #82571 for use on Webinar Registration Order Form Tickets.</description>
    <formula>Event__r.Filters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Must be filled on the Event Record.</inlineHelpText>
    <label>Event Filters</label>
    <type>Text</type>
</CustomField>