force-app/main/default/objects/Ticket__c/fields/Event_OneForm_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Event_OneForm_Landing_Page__c</fullName>
    <formula>Event__r.Landing_Page__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OneForm Landing Page</label>
    <type>Text</type>
</CustomField>