force-app/main/default/objects/Ticket__c/fields/Event_OneForm_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_OneForm_Link__c</fullName>
    <formula>Event__r.OneForm_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OneForm Link</label>
    <type>Text</type>
</CustomField>