force-app/main/default/objects/Ticket__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <formula>TEXT( Event__r.Event_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Time</label>
    <type>Text</type>
</CustomField>