force-app/main/default/objects/Ticket__c/fields/Exclude_Email_Group_Unsubscribes__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Email_Group_Unsubscribes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exclude Email Group Unsubscribes</label>
    <type>Checkbox</type>
</CustomField>