force-app/main/default/objects/Ticket__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description
  >Used to store feedback received on projects after delivery for reporting such as positive comments or user testimonials .</description>
    <inlineHelpText
  >Used to store feedback received on projects after delivery for reporting such as positive comments or user testimonials .</inlineHelpText>
    <label>Feedback</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>