force-app/main/default/objects/Ticket__c/fields/Final_Cost__c.field-meta.xml
<CustomField>
    <fullName>Final_Cost__c</fullName>
    <description># Cards Sent x $ Per Gift Card - Discount Amt</description>
    <formula>IF(
  OR(
    ISPICKVAL( Gift_Card_Type__c , &quot;Funds Transfer&quot;),
    ISPICKVAL( Gift_Card_Type__c , &quot;Carry Over&quot;)
  ),
  0,
  Cards_Sent__c * Per_Gift_Card__c - Discount_Amt__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  ># Cards Sent x $ Per Gift Card - Discount Amt</inlineHelpText>
    <label>Final Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>