force-app/main/default/objects/Ticket__c/fields/Final_List_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Final_List_Quantity__c</fullName>
    <description>The final overall list quantity.</description>
    <inlineHelpText>The final overall list quantity.</inlineHelpText>
    <label>Final List Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>