force-app/main/default/objects/Ticket__c/fields/Follow_Up_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Instructions__c</fullName>
    <description>Added for Ticket #79824</description>
    <inlineHelpText
  >Follow-up instructions provided to the requestor on ticket close.</inlineHelpText>
    <label>Follow-Up Instructions</label>
    <type>TextArea</type>
</CustomField>