force-app/main/default/objects/Ticket__c/fields/Get_Contacts_Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Get_Contacts_Last_Reviewed_Date__c</fullName>
    <formula>Account__r.Get_Contacts_Last_Reviewed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Contacts Last Reviewed Date</label>
    <type>Date</type>
</CustomField>