force-app/main/default/objects/Ticket__c/fields/Gift_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Type__c</fullName>
    <label>Gift Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Carry Over</fullName>
            </value>
            <value>
                <fullName>Funds Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>