force-app/main/default/objects/Ticket__c/fields/Gift_Cards_in_Order__c.field-meta.xml
<CustomField>
    <fullName>Gift_Cards_in_Order__c</fullName>
    <description>Number of gift cards in the order.</description>
    <label># Gift Cards in Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>