force-app/main/default/objects/Ticket__c/fields/Images_Attached__c.field-meta.xml
<CustomField>
    <fullName>Images_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check this box to indicate that you have attached images such as the header, banner, or logo, in the files section of the ticket.</description>
    <inlineHelpText
  >Check this box to indicate that you have attached images such as the header, banner, or logo, in the files section of the ticket.</inlineHelpText>
    <label>Images Attached?</label>
    <type>Checkbox</type>
</CustomField>