force-app/main/default/objects/Ticket__c/fields/Implied_Interest__c.field-meta.xml
<CustomField>
    <fullName>Implied_Interest__c</fullName>
    <label>Implied Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education HED</fullName>
            </value>
            <value>
                <fullName>Education K-12</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HHS</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>