force-app/main/default/objects/Ticket__c/fields/Industry_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Industry_Job_Function__c</fullName>
    <description>Industry contact job functions</description>
    <inlineHelpText>Industry contact job functions</inlineHelpText>
    <label>Industry Job Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Job_Function</valueSetName>
    </valueSet>
</CustomField>