force-app/main/default/objects/Ticket__c/fields/Industry_Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Industry_Job_Level__c</fullName>
    <description>Industry contact job role level</description>
    <inlineHelpText>Industry contact job role level</inlineHelpText>
    <label>Industry Job Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Job_Level</valueSetName>
    </valueSet>
</CustomField>