force-app/main/default/objects/Ticket__c/fields/Invite_Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Invite_Preview_Link__c</fullName>
    <description
  >Created for Ticket #82571 for use on Webinar Registration Order Form Tickets.</description>
    <label>Invite Preview Link</label>
    <type>Url</type>
</CustomField>