force-app/main/default/objects/Ticket__c/fields/Invite_Text__c.field-meta.xml
<CustomField>
    <fullName>Invite_Text__c</fullName>
    <label>Invite Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>