force-app/main/default/objects/Ticket__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>The invoice # for the gift card order.</description>
    <inlineHelpText>The invoice # for the gift card order.</inlineHelpText>
    <label>Invoice #</label>
    <length>9</length>
    <type>Text</type>
</CustomField>