force-app/main/default/objects/Ticket__c/fields/IT_Roadmap_Sub_Ticket__c.field-meta.xml
<CustomField>
    <fullName>IT_Roadmap_Sub_Ticket__c</fullName>
    <formula>Parent_Ticket__r.Project_Tracker__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Roadmap Sub-Ticket</label>
    <type>Checkbox</type>
</CustomField>