force-app/main/default/objects/Ticket__c/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Elected Official/Legislative</fullName>
            </value>
            <value>
                <fullName>02 - Finance/Procurement/Budget/Auditor</fullName>
            </value>
            <value>
                <fullName>03 - Information Technology</fullName>
            </value>
            <value>
                <fullName>04 - Engineering/Technical</fullName>
            </value>
            <value>
                <fullName>05 - Operations/Administration</fullName>
            </value>
            <value>
                <fullName
        >06 - Human Resource/Workforce/Training/Benefits</fullName>
                <label>06 - Human Resource/Workforce/Training/Benefits</label>
            </value>
            <value>
                <fullName>07 - First Responder (Police/Fire/EMS)</fullName>
            </value>
            <value>
                <fullName>08 - Emergency Management</fullName>
            </value>
            <value>
                <fullName>09 - Marketing/Sales</fullName>
            </value>
            <value>
                <fullName>10 - Education/Library Services</fullName>
            </value>
            <value>
                <fullName>99 - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>