force-app/main/default/objects/Ticket__c/fields/Job_Function_Detail__c.field-meta.xml
<CustomField>
    <fullName>Job_Function_Detail__c</fullName>
    <description
  >Detailed breakout of the job function demographic category.</description>
    <inlineHelpText
  >Detailed breakout of the job function demographic category.</inlineHelpText>
    <label>Job Function Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Function_Detail</valueSetName>
    </valueSet>
</CustomField>