force-app/main/default/objects/Ticket__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Elected Official</fullName>
            </value>
            <value>
                <fullName>02 - Executive/C-Level</fullName>
            </value>
            <value>
                <fullName>03 - Senior Management</fullName>
            </value>
            <value>
                <fullName>04 - Supervision</fullName>
            </value>
            <value>
                <fullName>05 - Subject Matter Expert/Practitioner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>