force-app/main/default/objects/Ticket__c/fields/Key_Project__c.field-meta.xml
<CustomField>
    <fullName>Key_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Project</label>
    <type>Checkbox</type>
</CustomField>