force-app/main/default/objects/Ticket__c/fields/Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL__c</fullName>
    <label>Landing Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>