force-app/main/default/objects/Ticket__c/fields/Link_to_Images__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Images__c</fullName>
    <description
  >Requested 2/16/2022 by Jen Caldwell [Ticket #35071]</description>
    <inlineHelpText
  >Location in Design&apos;s SharePoint where images can be found.</inlineHelpText>
    <label>Link to Images</label>
    <type>Url</type>
</CustomField>