force-app/main/default/objects/Ticket__c/fields/Log_Ticket_Hours__c.field-meta.xml
<CustomField>
    <fullName>Log_Ticket_Hours__c</fullName>
    <description
  >For use during the Salesforce ticket Close action only; this field has automation to clear it when set.</description>
    <label>Log Ticket Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>