force-app/main/default/objects/Ticket__c/fields/Mailing_City_Radius__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_Radius__c</fullName>
    <label>Mailing City Radius</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50 Miles</fullName>
            </value>
            <value>
                <fullName>75 Miles</fullName>
            </value>
            <value>
                <fullName>100 Miles</fullName>
            </value>
            <value>
                <fullName>120 Miles</fullName>
            </value>
            <value>
                <fullName>150 Miles</fullName>
            </value>
            <value>
                <fullName>200 Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>