force-app/main/default/objects/Ticket__c/fields/Max_Gift_Cards__c.field-meta.xml
<CustomField>
    <fullName>Max_Gift_Cards__c</fullName>
    <description
  >Maximum number of gift cards offered in the promotion.</description>
    <label>Max # Gift Cards</label>
    <length>32</length>
    <type>Text</type>
</CustomField>